--- a/mammoth-test/build.gradle
+++ b/mammoth-test/build.gradle
@@ -3,6 +3,7 @@ description = "JUnit extensions for testing Gradle plugins"
 dependencies {
   api gradleApi()
   api gradleTestKit()
+  compileOnlyApi "org.jetbrains:annotations:23.0.0"
   api "org.junit.jupiter:junit-jupiter-api:5.7.2"
   implementation "org.junit.platform:junit-platform-commons:1.7.2"
 }
