--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,9 @@ jobs:
       - name: "checkout repository"
         uses: "actions/checkout@v2"
       - name: "setup jdk 11"
-        uses: actions/setup-java@v2
+        uses: "actions/setup-java@v2"
         with:
+          distribution: "temurin"
           java-version: "11"
       - name: "build"
         run: "./gradlew build"
