--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = "net.kyori"
-version = "1.1.0"
+version = "1.2.0-SNAPSHOT"
 description = "Helpful API for writing Gradle plugins"
 
 dependencies {
