--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,34 +8,6 @@ on:
     branches: "**"
 
 jobs:
-  build:
-    # Only run on PRs if the source branch is on someone else's repo
-    if: "${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}"
-    strategy:
-      matrix:
-        os: ["ubuntu-latest", "windows-latest"]
-    runs-on: "${{ matrix.os }}"
-    steps:
-      - name: "checkout repository"
-        uses: "actions/checkout@v3"
-      - name: "setup jdk 11"
-        uses: "actions/setup-java@v3"
-        with:
-          distribution: "temurin"
-          java-version: "11"
-      - name: "build"
-        run: "./gradlew build"
-      - name: "Determine status"
-        if: "${{ runner.os == 'Linux' }}"
-        run: |
-          if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
-            echo "STATUS=snapshot" >> $GITHUB_ENV
-          else
-            echo "STATUS=release" >> $GITHUB_ENV
-          fi
-      - name: "publish"
-        if: "${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/master' }}"
-        run: "./gradlew publish"
-        env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
+  call-build:
+    uses: KyoriPowered/.github/.github/workflows/shared-ci.yaml@trunk
+    secrets: inherit
