build: Apply checkstyle to project

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,10 @@
 version = "1.0"
 
 [versions]
+checkstyle = "10.3.3"
 indra = "2.1.1"
 junit = "5.9.0"
+stylecheck = "0.2.0"
 
 [libraries]
 jetbrainsAnnotations = "org.jetbrains:annotations:23.0.0"
@@ -14,7 +16,14 @@ junit-api = { module = "org.junit.jupiter:junit-jupiter-api" }
 junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
 junit-platformCommons = { module = "org.junit.platform:junit-platform-commons" }
 
+# build
+stylecheck = { module = "ca.stellardrift:stylecheck", version.ref = "stylecheck" }
+
+# for renovate, do not use
+zCheckstyle = { module = "com.puppycrawl.tools:checkstyle", version.ref = "checkstyle" }
+
 [plugins]
 indra = { id = "net.kyori.indra", version.ref = "indra" }
+indra-checkstyle = { id = "net.kyori.indra.checkstyle", version.ref = "indra" }
 indra-licenseHeader = { id = "net.kyori.indra.license-header", version.ref = "indra" }
 indra-sonatype = { id = "net.kyori.indra.publishing.sonatype", version.ref = "indra" }
