--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   alias libs.plugins.indra
   alias libs.plugins.indra.licenseHeader
   alias libs.plugins.indra.sonatype
+  alias libs.plugins.indra.checkstyle
 }
 
 group = "net.kyori"
@@ -28,6 +29,11 @@ allprojects {
   apply plugin: "net.kyori.indra"
   apply plugin: "net.kyori.indra.license-header"
   apply plugin: "net.kyori.indra.publishing"
+  apply plugin: "net.kyori.indra.checkstyle"
+  
+  dependencies {
+    checkstyle(libs.stylecheck)
+  }
 
   indra {
     github("KyoriPowered", "mammoth") {
@@ -35,6 +41,7 @@ allprojects {
       publishing true
     }
     mitLicense()
+    checkstyle(libs.versions.checkstyle.get())
 
     configurePublications {
       pom {
