--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
+  alias libs.plugins.errorprone
   alias libs.plugins.indra
+  alias libs.plugins.indra.checkstyle
   alias libs.plugins.indra.licenseHeader
   alias libs.plugins.indra.sonatype
-  alias libs.plugins.indra.checkstyle
 }
 
 group = "net.kyori"
@@ -16,6 +17,7 @@ indraSonatype {
 dependencies {
   compileOnlyApi libs.jetbrainsAnnotations
   implementation gradleApi()
+  
   testImplementation platform(libs.junit.bom)
   testImplementation libs.junit.api
   testRuntimeOnly libs.junit.engine
@@ -32,9 +34,11 @@ allprojects {
   apply plugin: "net.kyori.indra.license-header"
   apply plugin: "net.kyori.indra.publishing"
   apply plugin: "net.kyori.indra.checkstyle"
+  apply plugin: "net.ltgt.errorprone"
   
   dependencies {
     checkstyle(libs.stylecheck)
+    errorprone(libs.errorprone)
   }
 
   indra {
