--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = "net.kyori"
-version = "1.2.0"
+version = "1.3.0-SNAPSHOT"
 description = "Helpful API for writing Gradle plugins"
 
 indraSonatype {
