--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = "net.kyori"
-version = "1.3.0"
+version = "1.4.0-SNAPSHOT"
 description = "Helpful API for writing Gradle plugins"
 
 indraSonatype {
