--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,5 +31,5 @@ indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-checkstyle = { id = "net.kyori.indra.checkstyle", version.ref = "indra" }
 indra-licenserSpotless = { id = "net.kyori.indra.licenser.spotless", version.ref = "indra" }
 indra-sonatype = { id = "net.kyori.indra.publishing.sonatype", version.ref = "indra" }
-nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version = "2.0.0-rc-1"}
+nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version = "2.0.0"}
 spotless = { id = "com.diffplug.spotless", version = "6.21.0" }
