chore(build): Use Kyori org keys

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ allprojects {
     mitLicense()
     checkstyle(libs.versions.checkstyle.get())
 
+    signWithKeyFromPrefixedProperties("kyori")
     configurePublications {
       pom {
         organization {
