chore(build): Bump toolchain versions to be able to keep running Errorprone

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,3 +11,5 @@ jobs:
   call-build:
     uses: KyoriPowered/.github/.github/workflows/shared-ci.yaml@trunk
     secrets: inherit
+    with:
+      runtime_version: 17
